<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/ocr"
            android:gravity="center"
            android:text="AUTENTIFICARE"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/emaillogare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/parolalogare"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/parola"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/parola"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <ProgressBar
            android:id="@+id/progresslogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/black" />

        <Button
            android:id="@+id/logarebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/logare"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <Button
            android:id="@+id/resetare_parola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@android:color/transparent"
            android:text="@string/parolauitate" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/ocr"
                android:text="NU AVEȚI CONT?"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/inregistrare_buton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="50dp"
                android:clickable="true"
                android:fontFamily="@font/ocr"
                android:text="@string/inregistrare"

                android:textColor="@color/black"
                android:textSize="15dp" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>