<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:queryBackground="@color/transparent"
            android:queryHint="@string/searchint"
            android:theme="@style/SearchViewStyle" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:iss_auto_cycle="true"
                    app:iss_corner_radius="5"
                    app:iss_delay="0"
                    app:iss_period="10000" />
                <TextView
                    android:id="@+id/marquee_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/ocr"
                    android:freezesText="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingLeft="15dip"
                    android:paddingTop="15dp"
                    android:paddingRight="15dip"
                    android:paddingBottom="15dip"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="TRANSPORT GRAUTIT LA DOMICIULIU PENTRU COMENZI PESTE 120 LEI"
                    android:textColor="@color/logo_red"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPagerImageSlider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="70dp"
                        android:paddingEnd="70dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:paddingTop="50dp"

                        android:text="@string/culori"
                        android:textColor="@color/white"
                        android:textSize="50dp" />

                    <TextView
                        android:id="@+id/vezi_tot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/vezi_tot"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </RelativeLayout>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/ocr"
                    android:freezesText="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingLeft="15dip"
                    android:paddingTop="15dp"
                    android:paddingRight="15dip"
                    android:paddingBottom="15dip"
                    android:text="@string/detalii_magazin"
                    android:textColor="@color/black"
                    android:textStyle="bold"

                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/man" />

                    <TextView
                        android:id="@+id/jeans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/neato"
                        android:paddingTop="50dp"
                        android:text="BEST"
                        android:textColor="@color/white"
                        android:textSize="50dp" />

                    <TextView
                        android:id="@+id/forjeans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/jeans"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/neato"
                        android:text="JEANS"
                        android:textColor="@color/white"
                        android:textSize="50dp" />

                    <TextView
                        android:id="@+id/forfor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/forjeans"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/neato"
                        android:text="FOR"
                        android:textColor="@color/white"
                        android:textSize="50dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/forfor"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/neato"
                        android:text="MEN"
                        android:textColor="@color/white"
                        android:textSize="50dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/accesories" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/neato"
                        android:text="ACCESSORIES"
                        android:textColor="@color/white"
                        android:textSize="50dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/woman" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/neato"
                        android:text="WOMEN"
                        android:textColor="@color/white"
                        android:textSize="50dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/shoes" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/neato"
                        android:text="SHOES"
                        android:textColor="@color/white"
                        android:textSize="50dp" />
                </RelativeLayout>



            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>